--- a/style.css
+++ b/style.css
@@ -1,26 +1,26 @@
 @font-face { 
   font-family: "TT Lakes bold";
-  src: url(font/TTLakes-Bold.ttf) format("eot"), 
-       url(font/TTLakes-Bold.ttf) format("woff"), 
-       url(font/TTLakes-Bold.ttf) format("truetype");
+  src: url(assets/font/TTLakes-Bold.ttf) format("eot"), 
+       url(assets/font/TTLakes-Bold.ttf) format("woff"), 
+       url(assets/font/TTLakes-Bold.ttf) format("truetype");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face { 
   font-family: "TT Lakes normal";
-  src: url(font/TTLakes-Medium.ttf) format("eot"), 
-       url(font/TTLakes-Medium.ttf) format("woff"), 
-       url(font/TTLakes-Medium.ttf) format("truetype");
+  src: url(assets/font/TTLakes-Medium.ttf) format("eot"), 
+       url(assets/font/TTLakes-Medium.ttf) format("woff"), 
+       url(assets/font/TTLakes-Medium.ttf) format("truetype");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face { 
   font-family: "TT Lakes medium";
-  src: url(font/TTLakes-Regular.ttf) format("eot"), 
-       url(font/TTLakes-Regular.ttf) format("woff"), 
-       url(font/TTLakes-Regular.ttf) format("truetype");
+  src: url(assets/font/TTLakes-Regular.ttf) format("eot"), 
+       url(assets/font/TTLakes-Regular.ttf) format("woff"), 
+       url(assets/font/TTLakes-Regular.ttf) format("truetype");
   font-weight: 400;
   font-style: normal;
 }
@@ -57,42 +57,36 @@ a {
 li{
   list-style-type: none;
 }
-
-
  
   /* Стилизуем Header */
 
 .header{
-width: 320px;
-height: 88px;
+max-width: 320px;
+min-height: 88px;
+display: flex;
 border-bottom: 1px solid #D9FFF5;
  margin-bottom: 24px; 
-
+ align-items: center;
 }
 
 .header .header__container{
-  width:90%;
-  height: 100%;
+  min-width:90%;
+ min-height: 100%; 
   margin:auto;
-  display:flex;
-  align-items: center;
-  
+  display:flex; 
 }
 
 .header__burger-menu{
   margin-left: 1px;
-
   margin-right: 16px;
 }
 
 .header__logo{  
   margin-right: 5%;  
-
 }
 
 .header__nav{
-  display: flex; 
-     
+  display: flex;      
 }
 
 .header__nav::before{
@@ -102,20 +96,37 @@ border-bottom: 1px solid #D9FFF5;
   background: #EAEAEA;
   border-radius: 1px;
   margin-right:20px;
+  margin-left: 20px;
 }
 
-.main__button-1,
-.main__button-2,
-.header__button-hidden,
+.button,
+.header__button-first,
 .header__button{
   display: flex;
   align-items:center;
   justify-content: center;
   background: #FF3E79;
-  border-radius: 20px;
+  border-radius: 50%;
   width: 40px;
   height: 40px;
   border:none; 
+  padding: auto;
+  
+}
+
+
+.main__button{
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  width:190px;
+  height: 50px;
+  gap:9px;
+  background-color: #F8F8F8;
+  border-color: transparent;
+  font-family: TT Lakes normal;
+  font-size: 16px;
+
 }
 
 .repair{
@@ -123,17 +134,17 @@ border-bottom: 1px solid #D9FFF5;
 }
 
 
-.header__list-hidden{
+.header__list-first{
   display: none;
 }
 
 /* Стилизуем Main */ 
  .main{
-  width: 320px;
-  height: 509px;
+  min-width: 320px;
+  min-height: 509px;
 }
  .main .main__container{
-  /* width: 100%; */
+   /* width: 100%;  */
   margin:auto;  
 } 
 
@@ -174,7 +185,7 @@ border-bottom: 1px solid #D9FFF5;
   display: flex;
   overflow-x: scroll;  
   white-space: nowrap;
-  gap: 25px;
+  column-gap: 15px;
   margin-bottom: 12px;
   font-family: TT Lakes normal;
   font-weight: 500;
@@ -187,11 +198,13 @@ border-bottom: 1px solid #D9FFF5;
 
 .main__main-menu-item{  
   padding: 8px ;
+  border: solid 2px;
+  border-color: transparent;
 }
 
 .main__main-menu-item:hover{
 /* width: 248px; */
-height: 40px;
+/* height: 40px; */
 background: #FFFFFF;
 border: 2px solid #B8FFEC;
 border-radius: 6px;
@@ -207,11 +220,12 @@ border-radius: 6px;
   line-height: 20px;
   margin-bottom: 16px;
 }
-.main__section-1{
-  margin-bottom: 18px; 
+
+.text__first-part{
+  margin-bottom: 18px;
 }
 
-.main__span-1,.main__span-2{
+.text__first-wrap, .text__second-wrap{
   display: none;
 }
 
@@ -236,18 +250,18 @@ border-radius: 6px;
 
  @media screen and (min-width: 768px) { /*адаптив шапки */ 
   .header{
-    width: 768px;
-    height:88px;
+    min-width: 768px;
+    min-height:88px;
   }
 }
 @media screen and (min-width: 768px){
   .header__nav{
-    margin-left: auto;
+    /* margin-left: auto; */
   } 
 }
 
 @media screen and (min-width: 768px){
-  .header__container .header__list-hidden{
+  .header__container .header__list-first{
     display: flex;
     gap: 16px;;
     
@@ -255,8 +269,8 @@ border-radius: 6px;
 }
 
 @media screen and (min-width: 768px){
-  .header__logo{
-    margin-right: 32.5%;
+  .header__nav-first{
+    margin-left: auto;
   }
 }
 
@@ -266,18 +280,16 @@ border-radius: 6px;
   align-items: center;
 }
 
- @media screen and (min-width: 768px){
+  @media screen and (min-width: 768px){
   .header__burger-menu::after{
   content: "";
   display: block;
   width: 2px;
   height: 39px;
   background: #EAEAEA;
-  border-radius: 1px;
-  
-
+  border-radius: 1px; 
   }
-}
+} 
 
 @media screen and (min-width: 768px){
   .header__burger-menu{
@@ -289,20 +301,18 @@ border-radius: 6px;
   @media screen and (min-width: 768px){ /*даптив мэйна*/
     .main__container{
       width: 768px;
-      height: 416px;
-    }
+      /* height: 416px;
+    } */
   }
 
   @media screen and (min-width: 768px){
     .main__content{
       display: flex;
     }
-
-
   }
 
   @media screen and (min-width: 768px){
-    .main__span-1{
+    .text__first-wrap{
       display: inline;
     }
   }
@@ -333,21 +343,31 @@ border-radius: 6px;
   }
 
   @media screen and (min-width: 1120px){
-    .main__container{
-      width:1120px;
+    .main{
+      max-width:1120px;
+      min-height: 535px;
+      margin:auto;
     }
   }
 
   @media screen and (min-width: 1120px){
-    .main__main-menu{
-      width:100%;
-      height: 22%;
-      display: flex;
-      white-space: nowrap;
-      flex-wrap: wrap;
-      gap: 15px 25px;
+    main .main__container{
+      width: 99%;
+       margin: auto; 
+    }
+  }
+
+  @media screen and (min-width: 1120px){
+    .main__main-menu{  
+       max-width: 1120px;
+        height: 21%;  
+       display: flex;
+       white-space: nowrap; 
+       flex-wrap: wrap;
+      column-gap: 15px;
       font-family: TT Lakes normal;
       font-weight: 500;
+      margin-bottom:20px;  
   }
 }
 
@@ -362,13 +382,14 @@ border-radius: 6px;
     display: flex;
     align-items: center;
     justify-content:space-between;
-  }
+    margin-bottom:27px;
+   }
 }
 
 @media screen and (min-width: 1120px){
 .main__nav-alternative{
-  display: flex;
-  margin-bottom: 27px;
+   display: flex;  
+   align-items: center;
 }
 }
 
@@ -377,7 +398,7 @@ border-radius: 6px;
   font-family: TT Lakes bold;
   color: #1B1C21;
   display: flex; 
-  gap: 16px;
+  gap: 30px;
   align-items: center; 
   }
 }
@@ -391,27 +412,10 @@ border-radius: 6px;
   height: 40px;
   background:#41F6D7;
   border-radius: 10px;
+  margin-left: -8%;
   }
 }
 
-@media screen and (min-width: 1120px){
-  .main__alternative-link{
-    margin-right: 8px;
-  }
-}
-
-@media screen and (min-width: 1120px){
-  .main__button-1{
-    margin-right: 32px;
-  }
-}
-
-@media screen and (min-width: 1120px){
-  .last-item{
-    margin-left: 26px;
-  }
-}
- 
   @media screen and (min-width: 1120px){
     .hidden-item{
       display: inline;
@@ -419,13 +423,13 @@ border-radius: 6px;
   }
 
   @media screen and (min-width: 1120px){
-    .hidden-item-2{
+    .hidden-item-servis{
       display: none;
     }
   }
 
   @media screen and (min-width: 1120px){
-    .hidden-item-1{
+    .hidden-item-price{
       order: 1;
    }
   }
@@ -433,6 +437,7 @@ border-radius: 6px;
   @media screen and (min-width: 1120px){
     .last-item{
       order: 1;
+       margin-left:1.3%;      
     }
   }
 
@@ -443,7 +448,7 @@ border-radius: 6px;
   }
 
   @media screen and (min-width: 1120px){
-    .main__span-2{
+    .text__second-wrap{
       display: inline;
     }
   }
@@ -460,6 +465,9 @@ border-radius: 6px;
       width: 531px;
       height: 383px;
       margin-bottom: 30px;
-
     }
   }
+
+  
+
+  
